--- a/Programmania/appsettings.json
+++ b/Programmania/appsettings.json
@@ -1,10 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+ "ConnectionStrings": {
+  "DefaultConnection": "Data Source=.;Initial Catalog=ProgrammaniaDB;Integrated Security = true;"
+ },
+ "Logging": {
+  "LogLevel": {
+   "Default": "Information",
+   "Microsoft": "Warning",
+   "Microsoft.Hosting.Lifetime": "Information"
+  }
+ },
+
+ "AppSettings": {
+  "SecretCode": "@MBC=wQeF^QZdfsNAdtCY_rNs9&v4&VwwYV@Tf4EMMD4RTu2CU3SLvGrBPjwFR*jQsF7PbhFRRTzE#m*^Xzmxa8H&h#pFN3@^$B2*P-JDJg8bz85uC8=7q$B4aLBP?nzZ$T4f-5GnzC4ReTS3KsNZyMePVpYqkhF?*vM$DwD9U-W*H78-f!*c%yUC!TKbahnkRwuv3W6s5kCH=M4XZf4k2+%wUC3*t8$F8fC97tkrEEZ_VSSjv2Lg_jVFqnDU%W-",
+  "JWTExpirationMinutes": 1,
+  "RTExpirationDays": 1
+ },
+ "AllowedHosts": "*"
 }
