--- a/Programmania/Programmania.csproj
+++ b/Programmania/Programmania.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\js\util\" />
   </ItemGroup>
 
   <ItemGroup>
